--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,11 @@ body {  }
 
 /* For About Section */
 .about-photo {
-    margin-top: 40px;
+    padding-top: 40px;
 }
 
 .about-content {
-    margin-top: 130px;
+    padding-top: 50px;
 }
 
 /* For Publications Section */
